testing for host site

--- a/wdd130/class1.html
+++ b/wdd130/class1.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Shrek is Love</title>
-</head>
-<body>
-  <a href="http://www.youtube.com/watch?v=jz40salowcc">Welcome Video</a>
-  <h2>I love web development</h2> 
-  <h2>it let me have this shrek photo on my screen</h2>
-  <h3>Darn right</h3>
-  <h1>This is Shrek</h1>
-  <img src="https://th.bing.com/th/id/OIP.gCRh4b9VvpiRpEtRgdQHoQHaEK?w=275&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7">
-  <a href="http://www.youtube.com/watch?v=WPywfWMPgt4"> Open here</a>
-  <img src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg" alt="Another one">
-</body>
+  </head>
+  <body>
+    <a href="http://www.youtube.com/watch?v=jz40salowcc">Welcome Video</a>
+    <h2>I love web development</h2>
+    <h2>it let me have this shrek photo on my screen</h2>
+    <h3>Darn right</h3>
+    <h1>This is Shrek</h1>
+    <img
+      src="https://th.bing.com/th/id/OIP.gCRh4b9VvpiRpEtRgdQHoQHaEK?w=275&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7"
+    />
+    <a href="http://www.youtube.com/watch?v=WPywfWMPgt4"> Open here</a>
+    <img
+      src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg"
+      alt="Another one"
+    />
+  </body>
 </html>
-Type I love Shrek so much= <input type="Hello my name is shrek">
+Type I love Shrek so much= <input type="Hello my name is shrek" />
