adding shrek code

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Coding is amazing</h1>
     <p>I cant believe I never started coding until now</p>
     <p>I cant believe I never started coding until now</p>
+    <a href="./wdd130/class1.html">Shrek Website</a>
   </body>
 </html>
