changes to html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>9:00 Class</title>
+    <title>Home Page</title>
   </head>
   <body>
-    <h1>Coding is amazing</h1>
-    <p>I cant believe I never started coding until now</p>
-    <p>I cant believe I never started coding until now</p>
-    <a href="./wdd130/class1.html">Shrek Website</a>
+    Hello this is my Home Page
   </body>
 </html>
