--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home Page</title>
   </head>
   <body>
-    Hello this is my Home Page
+    <h1>Hello this is my Home Page</h1>
+    <h2><a href="./wdd130/class1.html">Click here to view</a></h2>
   </body>
 </html>
