--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -10,7 +10,7 @@
     <h1>Hello this is my Home Page</h1>
     <h2>
       <a href="./wdd130/class1.html">Click here to view</a>
-      <a href="./wwr/site-plan-rafting.html">Site plan</a>
+      <a href="./wdd130/wwr/site-plan-rafting.html">Site plan</a>
     </h2>
   </body>
 </html>
