--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Hello this is my Home Page</h1>
     <h2><a href="./wdd130/class1.html">Click here to view</a>
-    <a href="./wwr/site-plan-rafting.html">Site plan</a></h2>
+    <a href="./wdd130/wwr/site-plan-rafting.html">Site plan</a></h2>
   </body>
 </html>
