--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Hello this is my Home Page</h1>
     <h2>
-      <a href="./wdd130/class1.html">Click here to view</a>
+      <a href="./wdd130/class1.html">Test Website</a>
       <a href="./wdd130/wwr/site-plan-rafting.html">Site plan</a>
     </h2>
   </body>
