--- a/wdd130/class1.html
+++ b/wdd130/class1.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <a href="http://www.youtube.com/watch?v=jz40salowcc">Welcome Video</a>
-    <h2>I love web development</h2>
-    <h2>it let me have this shrek photo on my screen</h2>
-    <h3>Darn right</h3>
-    <h1>This is Shrek</h1>
+    <h2 class="red">I love web development</h2>
+    <h2 class="red">it let me have this shrek photo on my screen</h2>
+    <h3 class="red">Darn right</h3>
+    <h1 id="big">This is Shrek</h1>
     <img
       src="https://th.bing.com/th/id/OIP.gCRh4b9VvpiRpEtRgdQHoQHaEK?w=275&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7"
     />
