--- a/wdd130/wwr/site-plan-rafting.html
+++ b/wdd130/wwr/site-plan-rafting.html
@@ -44,10 +44,7 @@
       <h2>Branding</h2>
       <h3>SPLASH</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img
-        src="https://byui-cit.github.io/wdd130/resources/images/logos/splash.png"
-        alt="Logo image"
-      />
+      <img src="images/splash.png" alt="Logo image" />
       <hr />
       <h2>Style Guide</h2>
 
