--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -66,7 +66,7 @@
       </section>
     </main>
     <footer>
-      <p>Spalsh &copy; 2022 - Ammon Fleming</p>
+      <p>Splash &copy; 2022 - Ammon Fleming</p>
       <p><a href="site-plan-rafting.html">Site Plan</a></p>
       <p><a href="contactus.html">Contact Us</a></p>
       <div class="social">
