--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hello this is my Home Page</h1>
     <h2><a href="./wdd130/class1.html">Click here to view</a>
     <a href="./wdd130/wwr/site-plan-rafting.html">Site plan</a>
-    <a href=".wdd130/wwr/index.html">Splash Home Page</a></h2>
+    <a href="./wdd130/wwr/index.html">Splash Home Page</a></h2>
   </body>
 </html>
