--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -4,82 +4,90 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Splash Home Page</title>
   </head>
   <body>
-    <header>
-      <a id="logo_link" href="index.html">
-        <img class="logo" src="images/splash.png" alt="Splash logo" />
-      </a>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="contactus.html">Contact Us</a>
-      </nav>
-    </header>
-    <div id="hero">
-      <div id="hero-box">
-        <img
-          id="hero-img"
-          src="images/hero.jpg"
-          alt="People love water rafting"
-        />
-      </div>
-      <section id="hero-msg">
-        <h1 class="home-title">Adventure of Your Life</h1>
-        <h4>New Memories await with Splash adventures</h4>
-        <div>
-          <a class="book" href="rates.html">Book Now</a>
+    <div id="content">
+      <header>
+        <a id="logo_link" href="index.html">
+          <img class="logo" src="images/splash.png" alt="Splash logo" />
+        </a>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="#">Page 2</a>
+          <a href="site-plan-rafting.html">Site Plan</a>
+          <a href="contactus.html">Contact Us</a>
+        </nav>
+      </header>
+      <div id="hero">
+        <div id="hero-box">
+          <img
+            id="hero-img"
+            src="images/hero.jpg"
+            alt="People love water rafting"
+          />
         </div>
-      </section>
-    </div>
-    <main class="home-grid">
-      <section class="rivers-card">
-        <img class="card-img" src="images/rivers.png" alt="River in Forest" />
-        <img class="icon" src="images/riversicon.png" alt="river icon" />
-        <h2>Rivers</h2>
-      </section>
-      <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg" alt="tent in mountain" />
-        <img class="icon" src="images/fire.png" alt="fire icon" />
-        <h2>Camping</h2>
-      </section>
-      <section class="rapids-card">
-        <img class="card-img" src="images/rapids.png" alt="Rafting boat" />
-        <img class="icon" src="images/rapids icon.png" alt="oars icon" />
-        <h2>Rapids</h2>
-      </section>
-      <img
-        class="mountains"
-        src="images/mountains2.png"
-        alt="Misty mountains"
-      />
-      <section class="msg">
-        <h2>More Than Just An Adventure</h2>
-        <p>
-          Enjoy the breathtaking scenery including: valleys, high peaks, meadows
-          and canyons. All in all it's way more than just a white water rafting
-          ride. Way more. It's a way to escape reality and relax in the most
-          sereal nature you've ever seen.
-        </p>
-      </section>
-    </main>
-    <footer>
-      <p>Splash &copy; 2022 - Ammon Fleming</p>
-      <p><a href="site-plan-rafting.html">Site Plan</a></p>
-      <p><a href="contactus.html">Contact Us</a></p>
-      <div class="social">
-        <a href="https://facebook.com">
-          <img src="images/facebook 3.png" alt="fb icon" />
-        </a>
-        <a href="https://twitter.com">
-          <img src="images/twitter9.png" alt="twitter icon" />
-        </a>
-        <a href="https://instagram.com">
-          <img src="images/insta-logo.png" alt="insta icon" />
-        </a>
+        <section id="hero-msg">
+          <h1 class="home-title">Adventure of Your Life</h1>
+          <h4 class="home-title2">New Memories await with Splash adventures</h4>
+          <div>
+            <a class="book" href="rates.html">Book Now</a>
+          </div>
+        </section>
       </div>
-    </footer>
+      <main class="home-grid">
+        <section class="rivers-card">
+          <img class="card-img" src="images/rivers.png" alt="River in Forest" />
+          <img class="icon" src="images/rivers_icon.png" alt="river icon" />
+          <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+          <img
+            class="card-img"
+            src="images/camping.jpg"
+            alt="tent in mountain"
+          />
+          <img class="icon" src="images/fire.png" alt="fire icon" />
+          <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+          <img class="card-img" src="images/rapids.png" alt="Rafting boat" />
+          <img class="icon" src="images/rapids_icon.png" alt="oars icon" />
+          <h2>Rapids</h2>
+        </section>
+        <div id="background"></div>
+        <img
+          class="mountains"
+          src="images/mountains2.png"
+          alt="Misty mountains"
+        />
+        <section class="msg">
+          <h2>More Than Just An Adventure</h2>
+          <p>
+            Enjoy the breathtaking scenery including: valleys, high peaks,
+            meadows and canyons. All in all it's way more than just a white
+            water rafting ride. Way more. It's a way to escape reality and relax
+            in the most sereal nature you've ever seen.
+          </p>
+        </section>
+      </main>
+      <footer>
+        <p>Splash &copy; 2022 - Ammon Fleming</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+          <a href="https://facebook.com">
+            <img id="social2" src="images/facebook3.png" alt="fb icon" />
+          </a>
+          <a href="https://twitter.com">
+            <img id="social2" src="images/twitter9.png" alt="twitter icon" />
+          </a>
+          <a href="https://instagram.com">
+            <img id="social2" src="images/insta_logo.png" alt="insta icon" />
+          </a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
