--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -29,7 +29,7 @@
           />
         </div>
         <section id="hero-msg">
-          <h1 class="home-title">Adventure of Your Life</h1>
+          <h1 class="home-title">The Adventure of Your Life</h1>
           <h4 class="home-title2">New Memories await with Splash adventures</h4>
           <div>
             <a class="book" href="rates.html">Book Now</a>
