--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2><a href="./wdd130/class1.html">Click here to view</a>
     <a href="./wdd130/wwr/site-plan-rafting.html">Site plan</a>
     <a href="./wdd130/wwr/index.html">Splash Home Page</a></h2>
+    <a href="./wdd130/positioning.html">Positioning Practice</a></h2>
   </body>
 </html>
