--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -11,7 +11,7 @@
     <div id="content">
       <header>
         <a id="logo_link" href="index.html">
-          <img class="logo" src="images/splash.png" alt="Splash logo" />
+          <img class="logo" src="images/splash.png" alt="Splash logos" />
         </a>
         <nav>
           <a href="index.html">Home</a>
