--- a/wdd130/wwr/site-plan-rafting.html
+++ b/wdd130/wwr/site-plan-rafting.html
@@ -139,7 +139,8 @@
         alt="home page wireframe"
       />
 
-      <h3>[Page 2]</h3>
+      <h3>[Rivers]</h3>
+      <img src="images/wireframe second page.png" alt="yeet" />
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
     </main>
