--- a/personal_web/site-plan.html
+++ b/personal_web/site-plan.html
@@ -107,19 +107,20 @@
       <h3>Navigation</h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Contact Us</a>
+        <a href="images2/Homepage.png">Home</a>
+        <a href="images2/buysell.png">Buy/Sell</a>
+        <a href="images2/FAQ.png">FAQ</a>
+        <a href=""></a>
       </nav>
       <hr />
       <h2>Site Map</h2>
       <div class="sitemap">
         <div class="sm-home">Home</div>
         <div class="sm-page2">
-          [Page2]
+          Buy/Sell
           <!-- this page will have a name later -->
         </div>
-        <div class="sm-page3">Contact Us</div>
+        <div class="sm-page3">FAQ</div>
 
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
