--- a/wdd130/wwr/site-plan-rafting.html
+++ b/wdd130/wwr/site-plan-rafting.html
@@ -11,6 +11,19 @@
   </head>
 
   <body>
+    <div>
+      <header>
+        <a id="logo_link" href="index.html">
+          <img class="logo" src="images/splash.png" alt="Splash logos" />
+        </a>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="riverspage.html">Rivers</a>
+          <a href="site-plan-rafting.html">Site Plan</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
+      </header>
+    </div>
     <header>
       <h1>White Water Rafting Site Plan</h1>
       <h2>Ammon Fleming</h2>
@@ -143,6 +156,22 @@
       <img src="images/wireframe second page.png" alt="yeet" />
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
+      <footer>
+        <p>Splash &copy; 2022 - Ammon Fleming</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+          <a href="https://facebook.com">
+            <img id="social2" src="images/facebook3.png" alt="fb icon" />
+          </a>
+          <a href="https://twitter.com">
+            <img id="social2" src="images/twitter9.png" alt="twitter icon" />
+          </a>
+          <a href="https://instagram.com">
+            <img id="social2" src="images/insta_logo.png" alt="insta icon" />
+          </a>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
