--- a/wdd130/wwr/index.html
+++ b/wdd130/wwr/index.html
@@ -75,7 +75,7 @@
       <footer>
         <p>Splash &copy; 2022 - Ammon Fleming</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href="contact.html">Contact Us</a></p>
         <div class="social">
           <a href="https://facebook.com">
             <img id="social2" src="images/facebook3.png" alt="fb icon" />
