--- a/personal_web/site-plan.html
+++ b/personal_web/site-plan.html
@@ -108,9 +108,9 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
         <a href="images2/Homepage.png">Home</a>
-        <a href="images2/buysell.png">Buy/Sell</a>
-        <a href="images2/FAQ.png">FAQ</a>
-        <a href=""></a>
+        <a href="images2/buysell.png">Buy</a>
+        <a href="images2/buysell.png">Sell</a>
+        <a href="">Contact Us</a>
       </nav>
       <hr />
       <h2>Site Map</h2>
@@ -120,7 +120,7 @@
           Buy/Sell
           <!-- this page will have a name later -->
         </div>
-        <div class="sm-page3">FAQ</div>
+        <div class="sm-page3">Sell</div>
 
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
@@ -131,13 +131,16 @@
       <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
       <h3>Home</h3>
+      <img src="images2/wireframe1.png" alt="wireframe" />
 
-      <a href="https://wireframe.cc/Pr862M">Wireframe</a>
-      <img src="images2/wireframe.png" alt="wireframe" />
-      <img src="images2/wireframe 2.png" alt="yeet" />
-      <img src="images2/wireframe 3.png" alt="yeet" />
+      <h3>Buy</h3>
+      <img src="images2/wireframebuy.png" alt="buy" />
 
-      <h3>[Page 2]</h3>
+      <h3>Sell</h3>
+      <img src="images2/wireframesell.png" alt="sell" />
+
+      <h3>Contact Us</h3>
+      <img src="images2/wireframecontact.png" alt="contact us" />
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
     </main>
