--- a/wdd130/wwr/site-plan-rafting.html
+++ b/wdd130/wwr/site-plan-rafting.html
@@ -153,7 +153,7 @@
       />
 
       <h3>[Rivers]</h3>
-      <img src="images/wireframe second page.png" alt="yeet" />
+      <img src="images/riverswireframe.png" alt="yeet" />
 
       <!-- <img src="#" alt="page 2 wireframe"> -->
       <footer>
