--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <a href="./wdd130/wwr/index.html">Splash Home Page</a></h2>
     <a href="./wdd130/positioning.html">Positioning Practice</a></h2>
     <a href="./personal_web/site-plan.html"> Personal Site-Plan</a></h2>
-    <a href="./personal_web/personal.html">Personal Home Page</a>
+    <a href="./personal_web/home.html">Personal Home Page</a>
   </body>
 </html>
