--- a/personal_web/buy.html
+++ b/personal_web/buy.html
@@ -30,7 +30,7 @@
       </header>
       <section>
         <img src="images2/buy2.jpg" alt="front photo" />
-        <h1>BUY</h1>
+        <h1>Buy</h1>
       </section>
       <form id="search">
         <label for="search">Search Catagories</label><br />
