--- a/personal_web/buy.html
+++ b/personal_web/buy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="personal.css" />
+    <link rel="stylesheet" href="styles/personal.css" />
     <title>Nifty Thrifty [Buy]</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
             alt="Nifty Thrifty logos"
           />
         </a>
-        <form id="search">
+        <form class="search">
           <label for="search">Search</label><br />
           <input type="text" name="search" value="" /><br />
         </form>
@@ -46,6 +46,29 @@
         <label for="search">Etc.</label><br />
         <input type="checkbox" name="etc" value="" /><br />
       </form>
+      <style>
+        form {
+          /* Just to center the form on the page */
+          width: 400px;
+          /* To see the outline of the form */
+          padding: 1em;
+          border: 1px solid #ccc;
+          border-radius: 1em;
+        }
+        #feedback {
+          background-color: antiquewhite;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          padding: 1em;
+          /* make this element invisible until we are ready for it */
+          display: none;
+        }
+        .moveDown {
+          margin-top: 3em;
+        }
+      </style>
       <section>
         <div>
           <img src="images2/deflep.jpg" alt="shirt" />
