--- a/personal_web/faq.html
+++ b/personal_web/faq.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/personal.css" />
     <title>Nifty Thrifty [FAQ]</title>
   </head>
   <body>
@@ -20,6 +21,30 @@
           <label for="search">Search</label><br />
           <input type="text" name="search" value="" /><br />
         </form>
+        <style>
+          form {
+            /* Just to center the form on the page */
+            margin: 0 auto;
+            width: 400px;
+            /* To see the outline of the form */
+            padding: 1em;
+            border: 1px solid #ccc;
+            border-radius: 1em;
+          }
+          #feedback {
+            background-color: antiquewhite;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            padding: 0.5em;
+            /* make this element invisible until we are ready for it */
+            display: none;
+          }
+          .moveDown {
+            margin-top: 3em;
+          }
+        </style>
         <nav>
           <a href="home.html">Home</a>
           <a href="buy.html">Buy</a>
@@ -31,6 +56,43 @@
         <img src="images2/faq1.jpg" alt="faq" />
         <h1>FAQ</h1>
       </section>
+      <section>
+        <h1>Frequently Asked questions</h1>
+      </section>
+      <section>
+        <h2>
+          What makes Nifty Thrifty different from other online shopping
+          websites.
+        </h2>
+        <p>
+          Not only do we provide an easy, user freindy constumer interface, we
+          also allow the customer to get money for the clothes they donate. Most
+          thrift stores are donation only, but we believe that the seller should
+          recieve money for the items they give up and in return can use it to
+          shop and buy new thrify items.
+        </p>
+        <h2>How do you mail in clothes?</h2>
+        <p>
+          Clothes should be mailed in by any means as long as the shipping
+          adresses are all correct. The clothes should be sent to the warehouse.
+          Location: 266 W 3rd S Rexburg, ID. You can also bring your clothes or
+          items into the store located at the same location to get your credit
+          instantly.
+        </p>
+        <h2>What's the average rate for items?</h2>
+        <p>
+          Our team will assess the quality, style, and appearance of the clothes
+          and give you an estimate of what your clothes are worth. No amount is
+          set, it is all determined by our team.
+        </p>
+        <h2>Does it cost for shipping?</h2>
+        <p>
+          Shipping is always free. To mail in your clothes there might be some
+          shipping cost just for the package and to mail it in, but we will
+          accomadate that with the credit you get back in stores.
+        </p>
+      </section>
+
       <footer>
         <p>Nifty Thrifty &copy; 2022 - Ammon Fleming</p>
         <p><a href="site-plan.html">Site Plan</a></p>
