--- a/personal_web/sell.html
+++ b/personal_web/sell.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="personal.css" />
+    <link rel="stylesheet" href="styles/personal.css" />
     <title>Nifty Thrifty [Sell]</title>
   </head>
   <body>
@@ -21,6 +21,29 @@
           <label for="search">Search</label><br />
           <input type="text" name="search" value="" /><br />
         </form>
+        <style>
+          form {
+            /* Just to center the form on the page */
+            width: 400px;
+            /* To see the outline of the form */
+            padding: 1em;
+            border: 1px solid #ccc;
+            border-radius: 1em;
+          }
+          #feedback {
+            background-color: antiquewhite;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            padding: 0.5em;
+            /* make this element invisible until we are ready for it */
+            display: none;
+          }
+          .moveDown {
+            margin-top: 3em;
+          }
+        </style>
         <nav>
           <a href="home.html">Home</a>
           <a href="buy.html">Buy</a>
@@ -28,6 +51,61 @@
           <a href="contactus.html">Contact Us</a>
         </nav>
       </header>
+      <section>
+        <img src="images2/sell2.jpg" alt="sell" />
+        <h1>Sell</h1>
+      </section>
+      <section>
+        <h1>Methods To Sell</h1>
+      </section>
+      <section>
+        <h2>Store Credit</h2>
+        <h2>Cash</h2>
+        <h2>Donate</h2>
+      </section>
+      <section>
+        <h3>Facility Drop Off Hours</h3>
+        <ul>
+          <li>Monday: 7am-9pm</li>
+          <li>Tuesday: 7am-9pm</li>
+          <li>Wednesday: 9am-8pm</li>
+          <li>Thursday: 7am-9pm</li>
+          <li>Friday: 9am-9pm</li>
+          <li>Saturday: 10am-4pm</li>
+          <li>Sunday: Closed</li>
+          <li>Holidays: Closed</li>
+        </ul>
+      </section>
+      <section>
+        <h2>What Not To Sell</h2>
+        <img src="images2/nomoney.jpg" alt="no money" />
+        <p>
+          Our facility does not accept toys of any kind or furniture type
+          products. We only accept clothing brands and items. Anything that can
+          be considered wearbale. Do not bring worn or broken material as our
+          workers will not give you back money. If you would like to get rid of
+          junk that you don't think will sell, we do have a dump that we can
+          transport it too.
+        </p>
+        <h2>What To Sell</h2>
+        <img src="images2/send.jpg" alt="money" />
+        <p>
+          We will take most if not all clothing items that is worn but in a
+          considerable condition. Items can be mailed in and we will asses the
+          quality of the clothing and if it is determined to not be sellable it
+          will be discarded or sent back at your request.
+        </p>
+      </section>
+      <section>
+        <h1>Free Shipping!!!</h1>
+        <img src="images2/shipping.jpg" alt="shipping" />
+        <h2>Print and Fill out Form and Attach to Shipment</h2>
+        <a
+          href="https://docs.google.com/document/d/1uH7jHGXX4Wnl1GF53j280R_f6b6gtPQnSx9gSCz3Aes/edit"
+          >Shipment Form</a
+        >
+      </section>
+
       <footer>
         <p>Nifty Thrifty &copy; 2022 - Ammon Fleming</p>
         <p><a href="site-plan.html">Site Plan</a></p>
