--- a/personal_web/faq.html
+++ b/personal_web/faq.html
@@ -17,44 +17,21 @@
             alt="Nifty Thrifty logos"
           />
         </a>
-        <form id="search">
-          <label for="search">Search</label><br />
-          <input type="text" name="search" value="" /><br />
-        </form>
-        <style>
-          form {
-            /* Just to center the form on the page */
-            margin: 0 auto;
-            width: 400px;
-            /* To see the outline of the form */
-            padding: 1em;
-            border: 1px solid #ccc;
-            border-radius: 1em;
-          }
-          #feedback {
-            background-color: antiquewhite;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            padding: 0.5em;
-            /* make this element invisible until we are ready for it */
-            display: none;
-          }
-          .moveDown {
-            margin-top: 3em;
-          }
-        </style>
-        <nav>
-          <a href="home.html">Home</a>
-          <a href="buy.html">Buy</a>
-          <a href="sell.html">Sell</a>
-          <a href="contactus.html">Contact Us</a>
-        </nav>
+        <section>
+          <form id="search">
+            <label for="search">Search</label><br />
+            <input type="text" name="search" value="" /><br />
+          </form>
+        </section>
+        <nav class="nav1">
+          <a class="yeet" href="home.html">Home</a>
+          <a class="yeet1" href="buy.html">Buy</a>
+          <a class="yeet2" href="sell.html">Sell</a>
+          <a class="yeet3" href="contactus.html">Contact Us</a>
       </header>
-      <section>
-        <img src="images2/faq1.jpg" alt="faq" />
-        <h1>FAQ</h1>
+      <section class="front">
+        <img class="front1" src="images2/faq1.jpg" alt="faq" />
+        <h1 class="front2">FAQ</h1>
       </section>
       <section>
         <h1>Frequently Asked questions</h1>
