--- a/personal_web/home.html
+++ b/personal_web/home.html
@@ -17,76 +17,73 @@
             alt="Nifty Thrifty logos"
           />
         </a>
-        <form id="search2">
-          <label for="search">Search</label><br />
-          <input type="text" name="search" value="" /><br />
-        </form>
-        <style>
-          form {
-            /* Just to center the form on the page */
-            width: 400px;
-            /* To see the outline of the form */
-            padding: 1em;
-            border: 1px solid #ccc;
-            border-radius: 1em;
-          }
-          #feedback {
-            background-color: antiquewhite;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            padding: 0.5em;
-            /* make this element invisible until we are ready for it */
-            display: none;
-          }
-          .moveDown {
-            margin-top: 3em;
-          }
-        </style>
-        <nav>
-          <a href="home.html">Home</a>
-          <a href="buy.html">Buy</a>
-          <a href="sell.html">Sell</a>
-          <a href="contactus.html">Contact Us</a>
+        <section>
+          <form id="search">
+            <label for="search">Search</label><br />
+            <input type="text" name="search" value="" /><br />
+          </form>
+        </section>
+        <nav class="nav1">
+          <a class="yeet" href="home.html">Home</a>
+          <a class="yeet1" href="buy.html">Buy</a>
+          <a class="yeet2" href="sell.html">Sell</a>
+          <a class="yeet3" href="contactus.html">Contact Us</a>
         </nav>
       </header>
-      <section>
-        <img src="images2/rsz_thrift (1).jpg" alt="front photo" />
-        <h1>Home</h1>
+      <section class="front">
+        <img
+          class="front1"
+          src="images2/rsz_thrift (1).jpg"
+          alt="front photo"
+        />
+        <h1 class="front2">Home</h1>
       </section>
-      <section>
-        <h1>Featured items</h1>
+      <h1 class="featureditems">Featured Items</h1>
+      <section class="featured">
         <div>
-          <img src="images2/flannel (1).jpg" alt="shirt" />
-          <p>H&M Premium Cotton Flannel. Mens, Large: $4.50</p>
+          <img class="photo1" src="images2/flannel (1).jpg" alt="shirt" />
+          <p class="text1">H&M Premium Cotton Flannel. Mens, Large</p>
+          <p class="text5">$4.50</p>
         </div>
         <div>
-          <img src="images2/rsz_pants (1).png" alt="pants" />
-          <p>Vintage 1985 Cargo Style Pants. Mens, Medium: $5.99</p>
+          <img class="photo2" src="images2/rsz_pants (1).png" alt="pants" />
+          <p class="text2">Vintage 1985 Cargo Style Pants. Mens, Medium</p>
+          <p class="text6">$5.99</p>
         </div>
         <div>
-          <img src="images2/rsz_shoes (1).png" alt="shoes" />
-          <p>Nike SB Dunks, Tan. Mens, Size 10: $10.45</p>
+          <img class="photo3" src="images2/rsz_shoes (1).png" alt="shoes" />
+          <p class="text3">Nike SB Dunks, Tan. Mens, Size 10</p>
+          <p class="text7">$10.45</p>
         </div>
         <div>
-          <img src="images2/coat.jpg" alt="coat" />
-          <p>Fur Coated Jacket. Womens, Medium $8.79</p>
+          <img class="photo4" src="images2/coat.jpg" alt="coat" />
+          <p class="text4">Fur Coated Jacket. Womens, Medium</p>
+          <p class="text8">$8.79</p>
         </div>
       </section>
-      <section>
-        <h1>Shop Top Catagories</h1>
-        <img src="images2/tshirt.png" alt="tshirt" />
-        <img src="images2/trousers.png" alt="pants" />
-        <img src="images2/sneakers.png" alt="shoes" />
-        <img src="images2/lab-coat.png" alt="coat" />
-        <img src="images2/clothes.png" alt="etc." />
+      <h1 class="featureditems1">Shop Top Catagories</h1>
+      <section class="catag">
+        <a href="buy.html"
+          ><img class="photos1" src="images2/tshirt.png" alt="tshirt"
+        /></a>
+        <a href="buy.html"
+          ><img class="photos2" src="images2/trousers.png" alt="pants"
+        /></a>
+        <a href="buy.html"
+          ><img class="photos3" src="images2/sneakers.png" alt="shoes"
+        /></a>
+        <a href="buy.html"
+          ><img class="photos4" src="images2/lab-coat.png" alt="coat"
+        /></a>
+        <a href="buy.html"
+          ><img class="photos5" src="images2/clothes.png" alt="etc."
+        /></a>
       </section>
       <footer>
         <p>Nifty Thrifty &copy; 2022 - Ammon Fleming</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <p><a href="faq.html">FAQ</a></p>
+        <p class="footer2"><a href="site-plan.html">Site Plan</a></p>
+        <p class="footer2"><a href="contactus.html">Contact Us</a></p>
+        <p class="footer2"><a href="faq.html">FAQ</a></p>
         <div class="social">
           <a href="https://facebook.com">
             <img id="social2" src="images2/facebook2.png" alt="fb icon" />
