--- a/personal_web/buy.html
+++ b/personal_web/buy.html
@@ -17,20 +17,22 @@
             alt="Nifty Thrifty logos"
           />
         </a>
-        <form class="search">
-          <label for="search">Search</label><br />
-          <input type="text" name="search" value="" /><br />
-        </form>
-        <nav>
-          <a href="home.html">Home</a>
-          <a href="buy.html">Buy</a>
-          <a href="sell.html">Sell</a>
-          <a href="contactus.html">Contact Us</a>
+        <section>
+          <form id="search">
+            <label for="search">Search</label><br />
+            <input type="text" name="search" value="" /><br />
+          </form>
+        </section>
+        <nav class="nav1">
+          <a class="yeet" href="home.html">Home</a>
+          <a class="yeet1" href="buy.html">Buy</a>
+          <a class="yeet2" href="sell.html">Sell</a>
+          <a class="yeet3" href="contactus.html">Contact Us</a>
         </nav>
       </header>
-      <section>
-        <img src="images2/buy2.jpg" alt="front photo" />
-        <h1>Buy</h1>
+      <section class="front">
+        <img class="front1" src="images2/buy2.jpg" alt="front photo" />
+        <h1 class="front2">Buy</h1>
       </section>
       <form id="search">
         <label for="search">Search Catagories</label><br />
@@ -46,29 +48,7 @@
         <label for="search">Etc.</label><br />
         <input type="checkbox" name="etc" value="" /><br />
       </form>
-      <style>
-        form {
-          /* Just to center the form on the page */
-          width: 400px;
-          /* To see the outline of the form */
-          padding: 1em;
-          border: 1px solid #ccc;
-          border-radius: 1em;
-        }
-        #feedback {
-          background-color: antiquewhite;
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          padding: 1em;
-          /* make this element invisible until we are ready for it */
-          display: none;
-        }
-        .moveDown {
-          margin-top: 3em;
-        }
-      </style>
+      <style></style>
       <section>
         <div>
           <img src="images2/deflep.jpg" alt="shirt" />
